--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,14 +15,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y cmake g++ make
-
     - name: Configure project
-      run: cmake -S . -B build
+      run: cmake -B build
 
     - name: Build project
       run: cmake --build build
 
     - name: Run tests
-      run: cd build && ctest --verbose
+      run: ctest --test-dir build --verbose
