--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Configure project
-      run: cmake -S lab1 -B build
+      run: cmake -S . -B build
 
     - name: Build project
       run: cmake --build build
