--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: C++ 
+name: C++ CI
 
 on:
   push:
@@ -29,6 +29,7 @@ jobs:
 
       - name: Build project
         run: |
+          cd lab1
           g++ -std=c++17 -I. -o my_tests tests/falling_fact_tests.cpp falling_fact.cpp -lgtest -lgtest_main -pthread
 
       - name: Run tests
