--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,10 @@
-name: C++ CI with Docker
+name: C++ CI
 
 on:
   push:
-    branches: [ "main", "docker-setup" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "docker-setup" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
@@ -14,35 +14,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up compiler and Google Test
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y g++ cmake make clang-tidy
+          git clone https://github.com/google/googletest.git
+          cd googletest
+          cmake .
+          make
+          sudo make install
 
-    - name: Build Docker image
-      run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/lab1-app:${{ github.sha }} .
-        docker push ghcr.io/${{ github.repository_owner }}/lab1-app:${{ github.sha }}
+      - name: Build project
+        run: |
+          g++ -std=c++17 -I. -o my_tests tests/falling_fact_tests.cpp falling_fact.cpp -lgtest -lgtest_main -pthread
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Pull Docker image
-      run: docker pull ghcr.io/${{ github.repository_owner }}/lab1-app:${{ github.sha }}
-
-    - name: Run tests inside container
-      run: docker run --rm ghcr.io/${{ github.repository_owner }}/lab1-app:${{ github.sha }}
+      - name: Run tests
+        run: |
+          chmod +x my_tests
+          ./my_tests
